CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( dense-slam )

SET(CMAKE_CXX_COMPILER "g++")
SET( CMAKE_BUILD_TYPE Release  )
# SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3")

FILE(GLOB ALL_SOURCES 
    "src/*.cpp"
)
FILE(GLOB ALL_INCLUDES 
    "src/*.h"
)
SET(ALL_SRCS ${ALL_SOURCES} ${ALL_INCLUDES})

# PCL
# FIND_PACKAGE( PCL REQUIRED COMPONENTS common io )
# ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
# INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
# LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

# octomap
FIND_PACKAGE( octomap REQUIRED )
INCLUDE_DIRECTORIES( ${OCTOMAP_INCLUDE_DIRS} )

# opencv
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# eigen
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES( ${Eigen3_INCLUDE_DIRS} )

ADD_EXECUTABLE( slam ${ALL_SRCS} )
TARGET_LINK_LIBRARIES( slam
    ${OCTOMAP_LIBRARIES}
    ${OpenCV_LIBS})